added card section!

--- a/index.html
+++ b/index.html
@@ -30,8 +30,77 @@
     </div>
   </header>
 
+<!-- Card Section -->
 
+  <main class="mt-30">
+    <div class="w-[888px] mx-auto text-center">
+      <h1 class="text-4xl font-semibold"> <span class="text-[#E95A08] text-4xl">Our</span> Plants</h1>
+      <p class="mt-4 mb-7 text-[#8987A1]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+    </div>
 
+      <!-- Card part -->
+
+    <div class="w-[1140px] mx-auto text-center grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10">
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+
+      <div class="w-[270px]">
+        <img src="assets/sample-flower-image.png" alt="">
+        <h3 class="font-semibold mt-1.5">Lily Blossom</h3>
+        <p class="font-bold">20 USD</p>
+        <button class="bg-[#E95A08] w-[270px] pt-1.5 pb-1.5 mt-1.5">ADD TO CART</button>
+      </div>
+    </div>
+  </main>
+
+  
 
 </body>
 </html>
